feat(artists): create the top artists page and artist albums

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,17 @@
 @tailwind utilities;
 
 
+@layer utilities {
+	@keyframes slide {
+    0% { transform: translateX(-100%); }
+    100% { transform: translateX(100%); }
+	}
+
+	.animate-slide {
+		animation: slide 2s infinite;
+	}
+}
+
 
 @layer base {
 	@font-face {
